# language2

./: .gitignore  README.md  agent_manager.py  agent_manager_module.py  api_helpers.py  app.py  config.json  container_config.py  conversation_manager.py  glinda_request_handler.py  main.py  message_preProcess.py  message_processor.py  message_processor_store.py  preset_handler.py  prompt_manager.py  prompt_store.py  prompts.py  prompts_module.py  pyproject.toml  requirements.txt  response_handler.py  source_code_response_handler.py  summarize_request_handler.py
static/: swagger.json
static/data/: agents.json  presets.json
test/: testcase1.md
tests/: test_app.py
